fixed some style issue when overflowing.

--- a/src/components/Home/Content/index.module.css
+++ b/src/components/Home/Content/index.module.css
@@ -1,4 +1,5 @@
 .container {
   background: linear-gradient(rgb(74, 73, 78), black);
   color: white;
+  overflow: auto;
 }
