--- a/src/components/Home/Sidebar/index.module.css
+++ b/src/components/Home/Sidebar/index.module.css
@@ -5,6 +5,8 @@
   padding-right: 10px;
   padding-top: 20px;
   padding-bottom: 5px;
+  height: 100%;
+  overflow: auto;
 }
 
 .logo {
@@ -26,4 +28,7 @@
 .playListContainer > hr {
   margin-top: 5px;
   margin-bottom: 15px;
+}
+.playListItems {
+  /* height: 100%; */
 }
